force-app/main/default/objects/Factura__c/fields/Pagada__c.field-meta.xml
<CustomField>
    <fullName>Pagada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pagada</label>
    <type>Checkbox</type>
</CustomField>