force-app/main/default/objects/Factura__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <summarizedField>Detalle_de_Fc__c.Subtotal__c</summarizedField>
    <summaryForeignKey>Detalle_de_Fc__c.Factura__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>